HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementStaticDefaultRequirement/Expected.uv
//! Expected diagnostic metadata for the RefinementStaticDefaultRequirement rejected-source specimen.

expectedDiagnostic("E-TYP-1953", "req.14.RefinementStaticDefaultDynamicFallback")
